Modified: Appereance for login and register screens

--- a/react-native/app.json
+++ b/react-native/app.json
@@ -10,6 +10,11 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "splash":{
+      "image": "../assets/favicon.png",
+      // "video": "../assets/splash-blue.mp4",
+      "resizeMode": "cover"
+    },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
