--- a/ror/Gemfile
+++ b/ror/Gemfile
@@ -28,7 +28,7 @@ gem "mini_magick"
 gem 'active_model_serializers', '~> 0.10.0'
 gem 'carrierwave', '~> 2.0'
 gem 'rack-cors'
-gem 'rails-erd'
+# gem 'rails-erd'
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
 # gem 'rack-cors'
 
