--- a/ror/Gemfile
+++ b/ror/Gemfile
@@ -27,6 +27,7 @@ gem "mini_magick"
 # gem 'omniauth-google-oauth2'
 gem 'active_model_serializers', '~> 0.10.0'
 gem 'carrierwave', '~> 2.0'
+gem 'carrierwave-base64'
 gem 'rack-cors'
 # gem 'rails-erd'
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
