--- a/react-native/app.json
+++ b/react-native/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "react-native",
-    "slug": "react-native",
+    "name": "TLB",
+    "slug": "TLB",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
